--- a/styles/styles.css
+++ b/styles/styles.css
@@ -164,6 +164,10 @@ figure {
     border: 1px solid #004e2f;
 }
 
+figcaption {
+    padding: 0 .25rem;
+}
+
 .eat, .stay {
     width: 18rem;
     word-wrap: break-word;
@@ -252,11 +256,6 @@ figure {
         width: 599px;
         margin: 0;
         padding: 0;
-    }
-
-    figcaption {
-        align-self: end;
-        padding: 0 .25rem;
     }
 }
 
